# sr-ronex

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  project.rosinstall  repository.rosinstall  shippable.yml  stack.xml
sr_common_msgs/: CMakeLists.txt  manifest.xml
sr_common_msgs/msg/: GeneralIOState.msg  PWM.msg
sr_ronex/: CHANGELOG.rst  CMakeLists.txt  package.xml
sr_ronex_controllers/: CHANGELOG.rst  CMakeLists.txt  controller_plugins.xml  mainpage.dox  manifest.xml  package.xml
sr_ronex_controllers/config/: general_io_passthrough_controller.yaml  spi_sensor_read_controller.yaml
sr_ronex_controllers/include/sr_ronex_controllers/: DC_motor_small_passthrough_controller.h  adc16_passthrough_controller.hpp  fake_calibration_controller.hpp  general_io_passthrough_controller.hpp  spi_base_controller.hpp  spi_passthrough_controller.hpp  spi_sensor_read_controller.h
sr_ronex_controllers/scripts/: load_passthrough_controllers.py  load_sensor_controller.py
sr_ronex_controllers/src/: DC_motor_small_passthrough_controller.cpp  adc16_passthrough_controller.cpp  fake_calibration_controller.cpp  general_io_passthrough_controller.cpp  spi_base_controller.cpp  spi_passthrough_controller.cpp  spi_sensor_read_controller.cpp
sr_ronex_drivers/: CHANGELOG.rst  CMakeLists.txt  ethercat_device_plugin.xml  package.xml  ros_ethercat_device_plugin.xml
sr_ronex_drivers/cfg/: ADC16.cfg  ADC16_32pins.cfg  ADC16_48pins.cfg  DCMotor.cfg  GeneralIO.cfg  SPI.cfg
sr_ronex_drivers/generator/: README.md  generate_driver.py
sr_ronex_drivers/generator/templates/: driver.cpp  driver.header  driver.hpp  driver.source  plugin.xml
sr_ronex_drivers/include/sr_ronex_drivers/: mk2_gio_hardware_interface.hpp  ronex_hw.hpp  ronex_utils.hpp  sr_board_0x.h  sr_board_adc16.hpp  sr_board_dc_motor_small.hpp  sr_board_mk2_gio.hpp  sr_spi.hpp  sr_tcat.hpp  typedefs_shadow.h  (+1 more)
sr_ronex_drivers/src/: sr_board_0x.cpp  sr_board_adc16.cpp  sr_board_dc_motor_small.cpp  sr_board_mk2_gio.cpp  sr_spi.cpp  sr_tcat.cpp  standard_ethercat_device.cpp
sr_ronex_drivers/test/: test_ethercat_drivers.cpp  test_ethercat_drivers.test
sr_ronex_examples/: CHANGELOG.rst  CMakeLists.txt  controller_plugins.xml  package.xml
sr_ronex_examples/config/: data_access_controller.yaml  joint_position_controller.yaml
sr_ronex_examples/launch/: sr_ronex_dim_LED_with_PWM.launch  sr_ronex_flash_LED_with_PWM.launch  sr_ronex_parse_parameter_server.launch  sr_ronex_parse_parameter_servers.launch  sr_ronex_read_analog_data.launch  sr_ronex_simple_controller.launch  sr_ronex_urdf.launch
sr_ronex_examples/model/: ronex.urdf  simple_robot.urdf
sr_ronex_examples/src/: akron_library.py  analogs_from_spi.py  change_ronex_configuration.cpp  change_ronex_configuration.py  ronex_motor_control.py  spi_hand_control.py  sr_ronex_dim_LED_with_PWM.cpp  sr_ronex_dim_LED_with_PWM.py  sr_ronex_flash_LED_with_PWM.cpp  sr_ronex_flash_LED_with_PWM.py  sr_ronex_parse_parameter_server.cpp  sr_ronex_parse_parameter_server.py  sr_ronex_parse_parameter_servers.cpp  sr_ronex_parse_parameter_servers.py  sr_ronex_read_analog_data.cpp  sr_ronex_read_analog_data.py  sr_ronex_simple_controller.cpp  sr_ronex_spi_dw1000.py  sr_ronex_spi_print_analogue.py
sr_ronex_external_protocol/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
sr_ronex_external_protocol/esi/: shadow_ronex_GIO.xml  shadow_ronex_bridge.xml
sr_ronex_hardware_interface/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
sr_ronex_launch/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
sr_ronex_launch/launch/: load_ronex_model.launch  ronex.urdf.xacro  sr_ronex.launch  sr_ronex_no_controllers.launch  sr_ronex_no_controllers_debug.launch  sr_ronex_no_controllers_ros_control_robot.launch  sr_ronex_ros_control_robot.launch  sr_ronex_spi_sensor.launch
sr_ronex_launch/loaders/: load_ronex_model.launch  passthrough_controllers.launch  ronex.urdf.xacro  spi_sensor_controllers.launch
sr_ronex_mechanism_model/: CMakeLists.txt  mainpage.dox  manifest.xml  transmission_plugin.xml
sr_ronex_mechanism_model/example/: analogue_to_joint_position.launch  analogue_to_joint_position.urdf  ronex.launch  ronex.urdf
sr_ronex_mechanism_model/src/: analogue_to_joint_effort.cpp  analogue_to_joint_position.cpp  ronex_mapping.cpp  ronex_transmission.cpp
sr_ronex_mechanism_model/test/: test_ronex_transmission.cpp
sr_ronex_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
sr_ronex_msgs/msg/: ADC16State.msg  DCMotorState.msg  GeneralIOState.msg  ImpulseSample.msg  MotorPacketCommand.msg  MotorPacketStatus.msg  ReceiverData.msg  SPICommand.msg  SPIPacketOut.msg  SPIState.msg  TCATState.msg
sr_ronex_msgs/srv/: SPI.srv
sr_ronex_test/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  mainpage.dox  mainpage.dox~  package.xml  package.xml~
sr_ronex_test/launch/: double_ronex_test.launch  single_ronex_test.launch  single_ronex_test.launch~  sr_ronex_no_controllers.launch  sr_ronex_test.launch
sr_ronex_test/src/: double_ronex_test.py
sr_ronex_test/test/: double_ronex.test  single_ronex.py  single_ronex.test  sr_ronex.test  sr_ronex_test.py  sr_spi_test.py  sr_spi_test_rt.py
sr_ronex_transmissions/: CHANGELOG.rst  CMakeLists.txt  LICENSE.md  mainpage.dox  package.xml  transmission_plugin.xml
sr_ronex_transmissions/example/: ronex.launch  ronex.urdf
sr_ronex_transmissions/src/: ronex_transmission.cpp
sr_ronex_transmissions/test/: ronex.urdf  test_ronex_transmission.cpp  test_ronex_transmission.test
sr_ronex_utilities/: CHANGELOG.rst  CMakeLists.txt  package.xml
sr_ronex_utilities/scripts/: plot_tcat_state.py
sr_ronex_utilities/test/: test_ronex_utilities.test  test_sr_ronex_utilities.cpp
src/sr_ronex/: package.xml
src/sr_ronex_ethercat_drivers/: CMakeLists.txt  package.xml
src/sr_ronex_external_protocol/: package.xml
src/sr_ronex_hardware_interface/: mainpage.dox  package.xml
src/sr_ronex_launch/: CMakeLists.txt  package.xml
src/sr_ronex_mechanism_model/: CMakeLists.txt  package.xml
(+181 files in other folders)
