<!-- Copyright (c) 2013, Shadow Robot Company, All rights reserved.     -->
<!--                                                                    -->
<!-- This library is free software; you can redistribute it and/or      -->
<!-- modify it under the terms of the GNU Lesser General Public         -->
<!-- License as published by the Free Software Foundation; either       -->
<!-- version 3.0 of the License, or (at your option) any later version. -->
<!--                                                                    -->
<!-- This library is distributed in the hope that it will be useful,    -->
<!-- but WITHOUT ANY WARRANTY; without even the implied warranty of     -->
<!-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU   -->
<!-- Lesser General Public License for more details.                    -->
<!--                                                                    -->
<!-- You should have received a copy of the GNU Lesser General Public   -->
<!-- License along with this library.                                   -->

<package>
  <name>sr_ronex</name>
  <version>1.0.0</version>
  <description>This stack contains the different packages related to the RoNeX (Robot Nervous System).</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>Proprietary</license>

  <url type="website">http://www.shadowrobot.com/products/ronex</url>
  <url type="repository">https://github.com/shadow-robot/sr-ronex</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ronex/issues</url>

  <author>Ugo Cupcic</author>
  <author>Toni Oliver</author>
  <author>Mark Pitchless</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sr_ronex_launch</run_depend>
  <run_depend>sr_ronex_transmissions</run_depend>
  <run_depend>sr_ronex_msgs</run_depend>
  <run_depend>sr_ronex_controllers</run_depend>
  <run_depend>sr_ronex_drivers</run_depend>
  <run_depend>sr_ronex_hardware_interface</run_depend>
  <run_depend>sr_ronex_external_protocol</run_depend>

  <!-- Dependencies needed only for running tests. -->
</package>
