<package>
  <name>sr_ronex</name>
  <version>0.9.15</version>
  <description>This stack contains the different packages related to the RoNeX (Robot Nervous System).</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>LGPLv3</license>

  <url type="website">http://www.shadowrobot.com/products/ronex</url>
  <url type="repository">https://github.com/shadow-robot/sr-ronex</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ronex/issues</url>

  <author>Ugo Cupcic</author>
  <author>Toni Oliver</author>
  <author>Mark Pitchless</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sr_ronex_launch</run_depend>
  <run_depend>sr_ronex_transmissions</run_depend>
  <run_depend>sr_ronex_msgs</run_depend>
  <run_depend>sr_ronex_controllers</run_depend>
  <run_depend>sr_ronex_drivers</run_depend>
  <run_depend>sr_ronex_hardware_interface</run_depend>
  <run_depend>sr_ronex_external_protocol</run_depend>
  <run_depend>sr_ronex_examples</run_depend>
  <run_depend>sr_ronex_utilities</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
