<package>
  <name>sr_ronex_controllers</name>
  <version>0.9.12</version>
  <description>Contains different useful controllers to use with the RoNeX.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>LGPLv3</license>


  <url type="website">http://www.shadowrobot.com/products/ronex</url>
  <url type="repository">https://github.com/shadow-robot/sr-ronex</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ronex/issues</url>

  <author>Ugo Cupcic</author>
  <author>Toni Oliver</author>
  <author>Mark Pitchless</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sr_ronex_msgs</build_depend>
  <build_depend>sr_ronex_hardware_interface</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>ros_ethercat_model</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>sr_ronex_utilities</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sr_ronex_msgs</run_depend>
  <run_depend>sr_ronex_hardware_interface</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>ros_ethercat_model</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>sr_ronex_utilities</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>std_srvs</test_depend> -->
  <!-- <test_depend>sr_ronex_msgs</test_depend> -->
  <!-- <test_depend>sr_ronex_hardware_interface</test_depend> -->
  <!-- <test_depend>pr2_mechanism_controllers</test_depend> -->
  <!-- <test_depend>pr2_controller_interface</test_depend> -->
  <!-- <test_depend>pr2_mechanism_model</test_depend> -->
  <!-- <test_depend>pluginlib</test_depend> -->

<export>
    <controller_interface plugin="${prefix}/controller_plugins.xml"/>
</export>

</package>
