<package>
  <name>sr_ronex_drivers</name>
  <version>0.9.14</version>
  <description>Package containing the driver for the RoNeX boards.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>LGPLv3</license>

  <url type="website">http://www.shadowrobot.com/products/ronex</url>
  <url type="repository">https://github.com/shadow-robot/sr-ronex</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ronex/issues</url>

  <author>Ugo Cupcic</author>
  <author>Toni Oliver</author>
  <author>Mark Pitchless</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>ros_ethercat_hardware</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sr_ronex_msgs</build_depend>
  <build_depend>sr_ronex_utilities</build_depend>
  <build_depend>ros_ethercat_model</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>sr_ronex_external_protocol</build_depend>
  <build_depend>sr_ronex_hardware_interface</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>ros_ethercat_hardware</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sr_ronex_msgs</run_depend>
  <run_depend>sr_ronex_utilities</run_depend>
  <run_depend>ros_ethercat_model</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>sr_ronex_external_protocol</run_depend>
  <run_depend>sr_ronex_hardware_interface</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <test_depend>gtest</test_depend>

<export>
    <ros_ethercat_hardware plugin="${prefix}/ethercat_device_plugin.xml"/>
</export>

</package>
