<?xml version="1.0"?>
<package>
  <name>sr_ronex_examples</name>
  <version>1.0.0</version>
  <description>Package containing examples for the RoNeX boards.</description>
  <maintainer email="software@shadowrobot.com">Ugo Cupcic</maintainer>

  <license>LGPLv3</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/sr_ronex_examples</url> -->

  <author>Yi Li</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sr_ronex_msgs</build_depend>
  <build_depend>sr_ronex_utilities</build_depend>
  
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sr_ronex_msgs</run_depend>
  <run_depend>sr_ronex_utilities</run_depend>

</package>